<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="fries_dashboard_title">Fries</string>
    <string name="fries_dashboard_summary">Customise your potato</string>
    <string name="statusbar_main">Status bar</string>
    <string name="statusbar_main_summary">Change potato status styles</string>
    <string name="qs_main">Quick settings</string>
    <string name="qs_main_summary">QS-Panel settings</string>
    <string name="theme_main">Themes</string>
    <string name="theme_main_summary">Color it up!</string>
    <string name="cutout_main">Display cutout settings</string>
    <string name="cutout_main_summary">They really cut corners with this one</string>
    <string name="buttonandgesture_main">Buttons &amp; Gestures</string>
    <string name="buttonandgesture_main_summary">Navigation keys, gestures</string>
    <string name="notification_main">Notifications</string>
    <string name="notification_main_summary">Control device alerts</string>
    <string name="misc_main">Miscellaneous</string>
    <string name="misc_main_summary">Stuff we don\'t know where to put</string>
    <string name="clock_main">Clock settings</string>
    <string name="clock_main_summary">Status bar clock customisation</string>
    <string name="lockscreen_main">Lockscreen</string>
    <string name="lockscreen_summary">Make your lockscreen look cooler?</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="system_colors">Colors</string>
    <string name="status_bar_title">Status bar</string>
    <string name="status_bar_style_title">Style</string>
    <string name="status_bar_clock">Clock &amp; Date</string>
    <string name="clock_enabled">Enabled</string>
    <string name="clock_disabled">Disabled</string>
    <string name="status_bar_clock_style_reset">Reset color</string>
    <string name="status_bar_show_clock_title">Show clock &amp; date</string>
    <string name="status_bar_am_pm_title">AM/PM</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="enable_clock_weekday">Day of the week</string>
    <string name="enable_clock_weekday_summary">Abbreviated day of the week before the time</string>
    <string name="dont_show">Don\'t show</string>
    <string name="clock_date_display">Date</string>
    <string name="clock_date_display_summary">Display custom date before the clock</string>
    <string name="clock_date_style">Date style</string>
    <string name="clock_date_format">Date format</string>
    <string name="clock_date_string_edittext_title">Must be in DateFormat eg. MM/dd/yy</string>
    <string name="clock_date_string_edittext_summary">Enter string</string>
    <string name="am_pm_clock_normal">Normal font size</string>
    <string name="am_pm_clock_small">Small font size</string>
    <string name="am_pm_clock_none">Don\'t show</string>
    <string name="clock_date_display_none">Don\'t show</string>
    <string name="clock_date_display_small">Small font size</string>
    <string name="clock_date_display_normal">Normal font size</string>
    <string name="clock_date_style_normal">Normal</string>
    <string name="clock_date_style_lowercase">Lowercase</string>
    <string name="clock_date_style_uppercase">Uppercase</string>
    <string name="clock_date_right">Right of time</string>
    <string name="clock_date_left">Left of time</string>
    <string name="clock_date_position">Date position</string>
    <string name="face_auto_unlock_title">Face auto unlock</string>
    <string name="face_auto_unlock_summary">Dismiss lockscreen after face unlocking</string>
    <string name="qs_rows_columns_title">QS rows and columns</string>
    <string name="qs_rows_portrait_title">Tiles rows on portrait</string>
    <string name="qs_rows_landscape_title">Tiles rows on landscape</string>
    <string name="qs_columns_portrait_title">Tiles columns on portrait</string>
    <string name="qs_columns_landscape_title">Tiles columns on landscape</string>
    <string name="brightness_slider_bottom_title">Bottom brightness slider</string>
    <string name="brightness_slider_bottom_summary">Show brightness slider on the bottom of the quick settings panel</string>
    <string name="tuner_show_auto_brightness">Adaptive brightness button</string>
    <string name="tuner_auto_brightness_right">Right position for adaptive brightness button</string>
    <string name="tuner_show_brightness_buttons">Brightness control buttons</string>
    <string name="qs_tile_title_visibility_title">Show tiles title</string>
    <string name="qs_tile_title_visibility_summary">Whether to show QS tiles title on QS panel</string>
    <string name="status_bar_quick_qs_pulldown">Quick QS pulldown</string>
    <string name="quick_pulldown_none">Disabled</string>
    <string name="quick_pulldown_right">Pulldown status bar from right side</string>
    <string name="quick_pulldown_left">Pulldown status bar from left side</string>
    <string name="volume_button_music_control_title">Playback control</string>
    <string name="volume_button_music_control_summary">When the screen is off, long-pressing the volume keys will skip music tracks</string>
    <string name="roaming_indicator_icon_title">Roaming indicator</string>
    <string name="roaming_indicator_icon_summary">Roaming indicator in signal icon when in roaming mode</string>
    <string name="volte_icon_title">VoLTE icon</string>
    <string name="volte_icon_summary">Display VoLTE icon (Needs a SystemUI restart to take effect)</string>
    <string name="powermenu_reboot_title">Restart</string>
    <string name="powermenu_advanced_restart_title">Advanced restart</string>
    <string name="powermenu_advanced_restart_summary">Enables the advanced restart menu for other restarting options</string>
    <string name="powermenu_lockdown_title">Lockdown</string>
    <string name="powermenu_screenshot_title">Screenshot</string>
    <string name="accent_color">Accent color</string>
    <string name="base_theme">Base theme color</string>
    <string name="system_shape">System wide icon shape</string>
    <string name="prefer_black_themes">Prefer black themes</string>
    <string name="prefer_black_themes_summary">Use black theme overlays instead of dark ones when possible</string>
    <string name="use_oreo_settings">Oreo settings icons</string>
    <string name="use_oreo_settings_summary">Blast from the Past!</string>
    <string name="settings_icon_tint">Tint settings icons</string>
    <string name="settings_icon_tint_summary">Show off that accent 😉</string>
    <string name="qs_panel_use_oreo_style">Toggle Oreo QS-Panel</string>
    <string name="qs_panel_use_oreo_style_summary">Oreo-everything! (Will restart SystemUI)</string>
    <string name="corners_category">Corners</string>
    <string name="corner_radius">Rounded corner radius</string>
    <string name="content_padding">Corner content padding</string>
    <string name="corner_fwvals">Use framework values</string>
    <string name="corner_fwvals_summary">Useful if the device actually has rounded corners</string>
    <string name="use_smart_clock">Smart Clock</string>
    <string name="use_smart_clock_summary">Show status bar clock periodically</string>
    <string name="heads_up_notifications">Heads up</string>
    <string name="summary_heads_up_enabled">Pop-up notifications are enabled</string>
    <string name="summary_heads_up_disabled">Pop-up notifications are disabled</string>
    <string name="add_heads_up_package">Add app</string>
    <string name="add_heads_up_stoplist_summary">Disable heads up notifications in these applications</string>
    <string name="add_heads_up_blacklist_summary">Disable heads up from these applications</string>
    <string name="heads_up_stoplist_title">Stoplist</string>
    <string name="heads_up_blacklist_title">Blacklist</string>
    <string name="profile_choose_app">Choose app</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_message">Remove selected item?</string>
    <string name="heads_up_time_out_title">Time out</string>
    <string name="heads_up_time_out_summary">Peeking notifications will show for <xliff:g id="number">%d</xliff:g> seconds</string>
    <string name="heads_up_time_out_2sec">2 seconds</string>
    <string name="heads_up_time_out_4sec">4 seconds</string>
    <string name="heads_up_time_out_5sec">5 seconds</string>
    <string name="heads_up_time_out_6sec">6 seconds</string>
    <string name="heads_up_time_out_8sec">8 seconds</string>
    <string name="heads_up_time_out_10sec">10 seconds</string>
    <string name="heads_up_snooze_title">Snooze timer</string>
    <string name="heads_up_snooze_summary_one_minute">Swiping up on peeking notifications will snooze heads up from that application for 1 minute</string>
    <string name="heads_up_snooze_summary">Swiping up on peeking notifications will snooze heads up from that application for <xliff:g id="number">%d</xliff:g> minutes</string>
    <string name="heads_up_snooze_disabled_summary">Snooze timer is disabled</string>
    <string name="heads_up_snooze_1min">1 minute</string>
    <string name="heads_up_snooze_5min">5 minutes</string>
    <string name="heads_up_snooze_10min">10 minutes</string>
    <string name="heads_up_snooze_15min">15 minutes</string>
    <string name="heads_up_snooze_20min">20 minutes</string>
    <string name="battery_style_category_title">Battery icon</string>
    <string name="status_bar_battery_percentage_title">Battery percentage</string>
    <string name="status_bar_battery_percentage_default">Hidden</string>
    <string name="status_bar_battery_percentage_text_next">Next to the icon</string>
    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
    <string name="battery_light_settings">Battery LED</string>
    <string name="battery_light_enable">Enable</string>
    <string name="battery_light_allow_on_dnd_title">Battery light in Do Not Disturb mode</string>
    <string name="backlight_timeout_title">Buttons backlight timeout</string>
    <string name="button_brightness_title">Backlight</string>
    <string name="hardware_keys_category">Hardware keys</string>
    <string name="qs_themes_category_title">Quick Settings colors</string>
    <string name="qs_panel_alpha_title">Transparency</string>
    <string name="qs_panel_color_title">Color</string>
    <string name="double_tap_sleep_lockscreen">Double tap to sleep on lockscreen</string>
    <string name="weather_unit">Temperature unit</string>
    <string name="brightness_slider_title">Brightness slider</string>
    <string name="block_on_secure_keyguard_title">Disable quick settings</string>
    <string name="block_on_secure_keyguard_summary">Disables quick settings on secure lockscreen</string>
    <string name="traffic_title">Traffic indicators</string>
    <string name="lockscreen_cover_filter_title">Lockscreen album art filter</string>
    <string name="album_art_title">Control lockscreen covers</string>
    <string name="lockscreen_misc_stuff">Lockscreen tweaks</string>
    <string name="media_art_title">Media cover art</string>
    <string name="media_art_summary">Enable media cover art on the lockscreen</string>
    <string name="lockscreen_clock_title">Clock widget</string>
    <string name="lockscreen_clock_summary">Show the clock widget on the lockscreen</string>
    <string name="lockscreen_info_title">Items underneath the clock</string>
    <string name="lockscreen_info_summary">Show the date, weather, alarms and zen on the lockscreen</string>
</resources>