<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2018 The Potato Open Sauce Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/qs_main">

    <Preference
        android:key="qs_rows_columns"
        android:fragment="com.potato.fries.fragments.QsRowsColumns"
        android:title="@string/qs_rows_columns_title"/>

    <ListPreference
        android:key="status_bar_quick_qs_pulldown"
        android:title="@string/status_bar_quick_qs_pulldown"
        android:entries="@array/quick_pulldown_entries"
        android:entryValues="@array/quick_pulldown_values" />

    <Preference
        android:key="traffic"
        android:fragment="com.potato.fries.fragments.Traffic"
        android:icon="@drawable/ic_traffic"
        android:title="@string/traffic_title" />

    <com.potato.fries.preferences.SystemSettingSwitchPreference
        android:key="qs_tile_title_visibility"
        android:title="@string/qs_tile_title_visibility_title"
        android:summary="@string/qs_tile_title_visibility_summary"
        android:defaultValue="true" />

    <com.potato.fries.preferences.SecureSettingSwitchPreference
        android:key="status_bar_locked_on_secure_keyguard"
        android:title="@string/block_on_secure_keyguard_title"
        android:summary="@string/block_on_secure_keyguard_summary"
        android:defaultValue="false"/>

    <PreferenceCategory
        android:title="@string/brightness_slider_title">

    <com.potato.fries.preferences.SecureSettingSwitchPreference
        android:key="qs_brightness_position_bottom"
        android:title="@string/brightness_slider_bottom_title"
        android:summary="@string/brightness_slider_bottom_summary"
        android:defaultValue="false" />

    <com.potato.fries.preferences.SecureSettingSwitchPreference
        android:key="qs_show_auto_brightness"
        android:title="@string/tuner_show_auto_brightness"
        android:defaultValue="true" />

    <com.potato.fries.preferences.SecureSettingSwitchPreference
        android:key="qs_auto_brightness_right"
        android:title="@string/tuner_auto_brightness_right"
        android:defaultValue="true" />

    <com.potato.fries.preferences.SecureSettingSwitchPreference
        android:key="qs_show_brightness_buttons"
        android:title="@string/tuner_show_brightness_buttons"
        android:defaultValue="true" />

    </PreferenceCategory>

</PreferenceScreen>
